--- a/manifest.json
+++ b/manifest.json
@@ -9,12 +9,17 @@
     "48": "icons/icon48.png",
     "128": "icons/icon128.png"
   },
+  "background": {
+    "page": "src/background/background.html",
+    "persistent": false
+  },
   "browser_action": {
     "default_title": "Workspaces",
     "default_icon": "icons/icon19.png",
     "default_popup": "src/popup/popup.html"
   },
   "permissions": [
+    "contextMenus",
     "storage",
     "tabs"
   ]
