--- a/src/manifest.json
+++ b/src/manifest.json
@@ -12,7 +12,7 @@
     "256": "icons/extension/icon256.png"
   },
   "background": {
-    "service_worker": "serviceWorker.compiled.js"
+    "service_worker": "serviceWorkerLoader.js"
   },
   "action": {
     "default_icon": {
