--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "rollup": "^2.45.2"
   },
   "scripts": {
-    "dev": "rollup -c -w"
+    "dev": "rollup -c -w",
+    "pack": "bash scripts/pack.sh"
   }
 }
