Permission check when opening local files (Issue #29)

--- a/manifest.json
+++ b/manifest.json
@@ -35,6 +35,9 @@
     "tabs",
     "tabGroups"
   ],
+  "optional_host_permissions": [
+    "file://*/*"
+  ],
   "commands": {
     "_execute_action": {
       "suggested_key": {
